--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@changesets/config": "^3.1.1",
     "@changesets/read": "^0.6.5",
     "@types/node": "^22.16.5",
-    "bob-esbuild": "^4.0.3",
+    "@types/prettier": "^2.7.3",
     "bob-esbuild-cli": "^4.0.0",
+    "bob-esbuild": "^4.0.3",
     "bob-ts": "^4.1.1",
     "bob-tsm": "^1.1.2",
     "bufferutil": "^4.0.9",
@@ -39,6 +40,9 @@
     "jest": "^29.7.0",
     "open": "^10.2.0",
     "prettier": "^2.8.8",
+    "pretty-quick": "^3.3.1",
+    "rimraf": "^5.0.5",
+    "semver": "^7.6.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
