--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   },
   "include": ["src", "vitest.setup.ts"]
 }
