chore(example): use the correct graphql endpoint

--- a/examples/vite-react/package.json
+++ b/examples/vite-react/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
-    "generate": "gqty --no-install https://gql.omniwe.com",
+    "generate": "gqty --no-install https://rickandmortyapi.com/graphql",
     "serve": "vite preview"
   },
   "gqty": {
