chore(deps): Upgrade deprecated packages

--- a/examples/gnt/package.json
+++ b/examples/gnt/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@gqty/logger": "workspace:^",
     "@gqty/react": "workspace:^",
-    "@nhost/nextjs": "^2.2.9",
+    "@nhost/nhost-js": "^4.2.0",
     "gqty": "workspace:^",
     "graphql": "^16.11.0",
     "graphql-ws": "^5.16.2",
