--- a/packages/gqty/package.json
+++ b/packages/gqty/package.json
@@ -82,7 +82,7 @@
     "p-defer": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22.16.5",
+    "@types/node": "^25.0.0",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
@@ -120,7 +120,7 @@
     }
   },
   "engines": {
-    "node": "^12.20.0 || >=14.13.0"
+    "node": ">=16 <=25"
   },
   "publishConfig": {
     "directory": "dist"
