--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -82,7 +82,7 @@
     ]
   },
   "dependencies": {
-    "@react-hookz/web": "^23.1.0",
+    "@react-hookz/web": "^25.2.0",
     "multidict": "^1.0.9",
     "p-debounce": "^4.0.0",
     "p-defer": "^3.0.0",
@@ -99,7 +99,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.16.5",
+    "@types/node": "^25.0.0",
     "@types/react": "^18.3.23",
     "@types/use-sync-external-store": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
@@ -138,7 +138,7 @@
     }
   },
   "engines": {
-    "node": "^12.20.0 || >=14.13.0"
+    "node": ">=16 <=25"
   },
   "publishConfig": {
     "directory": "dist"
