--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -45,7 +45,7 @@
     "prettier": "^3.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.16.5",
+    "@types/node": "^25.0.0",
     "bob-esbuild-cli": "^4.0.0",
     "gqty": "workspace:^",
     "jest": "^29.7.0",
@@ -56,7 +56,7 @@
     "gqty": "workspace:^3.4.2"
   },
   "engines": {
-    "node": "^12.20.0 || >=14.13.0"
+    "node": ">=16 <=25"
   },
   "publishConfig": {
     "directory": "dist"
