--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@changesets/read": "^0.6.5",
     "@types/node": "^22.16.5",
     "@types/prettier": "^2.7.3",
-    "bob-esbuild-cli": "^4.0.0",
     "bob-esbuild": "^4.0.3",
+    "bob-esbuild-cli": "^4.0.0",
     "bob-ts": "^4.1.1",
     "bob-tsm": "^1.1.2",
     "bufferutil": "^4.0.9",
@@ -48,5 +48,5 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
-  "packageManager": "pnpm@10.16.0+sha512.8066e7b034217b700a9a4dbb3a005061d641ba130a89915213a10b3ca4919c19c037bec8066afdc559b89635fdb806b16ea673f2468fbb28aabfa13c53e3f769"
+  "packageManager": "pnpm@10.26.2"
 }
